--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,10 @@ streamlit>=1.35,<1.40
 pandas>=2.0,<2.3
 requests>=2.31,<2.33
 python-dateutil>=2.8.2,<2.9
-# newspaper3k and its deps
+# web search
+duckduckgo_search>=5.3.0,<5.4
+# content extraction (optional but pinned for compatibility)
 newspaper3k==0.2.8
 lxml==4.9.3
 cssselect==1.2.0
 beautifulsoup4==4.12.3
-# analysis
-scikit-learn>=1.3,<1.5
-kiwipiepy>=0.15.2
-duckduckgo_search>=5.3.0,<5.4
