--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
+streamlit
+pandas
 requests
-feedparser
 python-dateutil
-trafilatura>=1.6.3
-readability-lxml
-beautifulsoup4
-tldextract
-numpy
-scikit-learn
-kiwipiepy
+duckduckgo_search
+# 엑셀/PDF 내보내기
 xlsxwriter
 openpyxl
+reportlab
